# pointcloud_to_sim_model

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
nodes/: spawn_gazebo
src/pointcloud2simmodel/: cloudcollector.py  generator.py  spawner.py  templates.py  voxelgrid.py
src/pointcloud2simmodel/scene_creation/: generator.py  spawner.py  utils.py
src/real2sim/: agent.py  validator.py
src/real2sim/action_generation/: actions.py  learner.py
src/real2sim/observation_generation/: observers.py
src/real2sim/scene_creation/: cloudcollector.py  generator.py  spawner.py  templates.py  voxelgrid.py
