<?xml version="1.0"?>
<package format="2">
  <name>real2sim</name>
  <version>0.1.0</version>
  <description>Package to convert point cloud data to simulated solids</description>

  <maintainer email="chris@cthierauf.com">cst0 (chris thierauf)</maintainer>
  <license>Apache2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
  </export>

</package>
